Require TOTP verification to finish initial registration
